
	* lib/perl.cygclass (check_perl_module): Cleaner syntax.

	* lib/kde3.cygclass: Don't run kde3_autoreconf for i18n/l10n packages.

	* CYGWIN-PATCHES/README
	* configure.ac:
	Post-release version bump.

*** 0.2.10 ***

	* README: Update location of sample.cygport.

	* lib/ruby.cygclass (ruby_install): Fix last setup.rb install patch.

	* lib/gst-plugins0.8.cygclass: Restore opengl plugin.

	* bin/cygport.in: Allow user-specific cygport.conf files in $HOME.

	* data/mirrors (mirror_apache): Added.

	* lib/pygtk.cygclass: Add pytotem from gnome-python-desktop.

	* data/mirrors (mirror_xfce): Added.

	* lib/kde3.cygclass: Define SRC_URI for kdevelop-3.4 and amarok.

	* CYGWIN-PATCHES/README
	* configure.ac:
	Post-release version bump.

*** 0.2.9 ***

	* bin/cygport.in (unpack): Handle .shar files with unshar.

	* lib/ruby.cygclass (ruby_install): Pass --prefix to setup.rb install.

	* bin/cygport.in (__prepdoc): Add HISTORY to default_docs.

	* bin/cygport.in (src_prep): 
	Sanity check for origsrc/SRC_DIR before applying PATCH_URIs.

	* data/mirrors (mirror_gentoo): Added.

	* data/mirrors (mirror_rubyforge): Added.

	* data/Makefile.am
	* data/cygport.nanorc:
	nano(1) syntax highlighting rcfile for cygports and cygclasses.

	* bin/cygport.in: Added postinstall command for developers.

	* bin/cygport.in (apply_patch): Fix patchlevel redefinition.

	* lib/Makefile.am
	* lib/apache.cygclass:
	New cygclass for building Apache mod_* modules.

	* lib/qt3.cygclass: Add --enable-auto-import to LDFLAGS.

	* lib/kde3.cygclass (kde3_compile):
	Enable arts by default. Run make apidox when applicable.
	* (kde3_install): Handle alternate split-package naming.

	* data/mirrors (mirror_berlios): Added.

	* lib/ruby.cygclass (ruby_compile, ruby_install):
	Support ruby extensions which use solely rake.

	* bin/cygport.in (gpg_verify): Fix .sig extensions.
	Patch by Eric Blake: http://cygwin.com/ml/cygwin/2007-01/msg00593.html

	* lib/gnome.org.cygclass: Add GNOME SVN_URI.